// Bun Snapshot v1, https://bun.sh/docs/test/snapshots

exports[`updateMemory parameters should fail to parse append operation without content 1`] = `[Definition: [
  {
    "code": "custom",
    "message": "Content is required for \\"append\\" and \\"replace\\" operations.",
    "path": [
      "content"
    ]
  }
]]`;

exports[`updateMemory parameters should fail to parse replace operation without content 1`] = `[Definition: [
  {
    "code": "custom",
    "message": "Content is required for \\"append\\" and \\"replace\\" operations.",
    "path": [
      "content"
    ]
  }
]]`;

exports[`updateMemory parameters should fail to parse remove operation with content 1`] = `[Definition: [
  {
    "code": "custom",
    "message": "Content must not be provided for \\"remove\\" operation.",
    "path": [
      "content"
    ]
  }
]]`;

exports[`updateMemory handler should handle append operation 1`] = `
{
  "message": {
    "type": "text",
    "value": "Content appended to memory topic ':default:'.",
  },
  "success": true,
}
`;

exports[`updateMemory handler should handle replace operation with topic 1`] = `
{
  "message": {
    "type": "text",
    "value": "Memory topic 'my-topic' replaced.",
  },
  "success": true,
}
`;

exports[`updateMemory handler should handle remove operation 1`] = `
{
  "message": {
    "type": "text",
    "value": "Memory topic ':default:' removed.",
  },
  "success": true,
}
`;

exports[`updateMemory handler should return error if provider does not support memory 1`] = `
{
  "message": {
    "type": "error-text",
    "value": "Memory operations are not supported by the current provider.",
  },
  "success": false,
}
`;
